plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.beryx.jlink' version '3.1.1'
    id 'idea'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(24)

dependencies {
    implementation 'net.java.dev.jna:jna-platform-jpms:5.17.0'
}

javafx {
    version = '24.0.1'
    modules = ['javafx.graphics', 'javafx.controls']
    platform = 'win'
}

var compileJvmArgs = ['--enable-preview']
// JavaFX 25 will likely stop using sun.misc.Unsafe, when upgrading to JavaFx, this flag can be removed:
// --sun-misc-unsafe-memory-access=allow
// Without it, this warning is logged:
// WARNING: sun.misc.Unsafe::allocateMemory has been called by com.sun.marlin.OffHeapArray
var runJvmArgs = compileJvmArgs + ['-XX:+UseZGC', '-Xlog:gc=debug::time', '--enable-native-access=com.sun.jna,javafx.graphics', '--sun-misc-unsafe-memory-access=allow']

tasks.withType(JavaCompile).forEach {
    it.options.compilerArgs.addAll compileJvmArgs
}

application {
    mainModule = 'dev.peksa.speedrun'
    mainClass = 'dev.peksa.speedrun.journey.app.Launcher'
    applicationDefaultJvmArgs.addAll runJvmArgs
}

jlink  {
    options = ['--strip-debug', '--compress', 'zip-9', '--no-header-files', '--no-man-pages', '--strip-native-commands',
               '--strip-java-debug-attributes', '--dedup-legal-notices=error-if-not-same-content']
    launcher {
        jvmArgs = runJvmArgs
        noConsole = false
        name = 'peksa-fancy-flyer-tool'
    }
    jpackage {
        // Add '--win-console' to imageOptions below to enable the console window with logs
        imageOptions = ['--description', "Peksa's fancy flyer tool", '--copyright', 'Copyright (c) 2025 Peksa']
        vendor = 'Peksa'
        icon = 'icon.ico'
        version = '6.0.0'
        skipInstaller = true
        targetPlatformName = 'win'
    }
}

repositories {
    mavenCentral()
}